SERVER-13422 fix planning bug for elemMatch object index intersection